--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/ewi0kzx.css">
 </head>
 
 <body>
@@ -31,6 +32,11 @@
             <p id="subtitle">
                 Creative media & game technologies
             </p>
+
+            <article>
+                <h2>About me</h2>
+                <p></p>
+            </article>
 
             <div id="progressWrapper">
                 <label for="html">HTML:5</label>
