added an about me

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <a href="#" id="logo">Sander</a>
+        <a id="logo">Sander</a>
         <a href="#">About</a>
         <a href="#">Projects</a>
         <a href="#">Contact</a>
@@ -32,9 +32,14 @@
                 Creative media & game technologies
             </p>
 
-            <article>
-                <h2>About me</h2>
-                <p></p>
+            <article id="about">
+                <h2 id="aboutTitle">About me</h2>
+                <p>Hi there, my name is Sander Verhoeven. At the moment i'm a student at the University of Applied
+                    Sciences in Rotterdam and studying Creative Media and Game Technologies. I have a bunch of different
+                    interests, but the ones that I like the most are playing video games, vibing to music and watching
+                    shows on whatever service available. The traits that would describe me best, would be critical and
+                    curious.
+                </p>
             </article>
 
             <div id="progressWrapper">
