--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <span class="ityped"></span>
             </div>
             <div id="pfpic">
-                <img src="./assets/pfp.jpg" alt="profile picture">
+                <img src="./assets/pfp.png" alt="profile picture">
             </div>
             <hr />
             <p id="subtitle">
@@ -49,14 +49,8 @@
                 </p>
             </article>
 
-            <article class="textClass">
-                <h2 class="titleClass">My skillset</h2>
-                <p>
-                </p>
-                <p>
-                </p>
-            </article>
             <div id="progressWrapper">
+                <h3 class="titleClass">My skillset</h3>
                 <label for="html">HTML:5</label>
                 <progress class="progressBar" id="html" max="100" value="80"></progress>
 
@@ -66,17 +60,40 @@
                 <label for="php">PHP</label>
                 <progress class="progressBar" id="php" max="100" value="60"></progress>
 
-                <label for="Javascript">Javascript</label>
+                <label for="Javascript">JavaScript</label>
                 <progress class="progressBar" id="Javascript" max="100" value="70"></progress>
 
-                <label for="Typescript">Typescript</label>
-                <progress class="progressBar" id="Typescript" max="100" value="60"></progress>
+                <label for="Typescript">TypeScript</label>
+                <progress class="progressBar" id="Typescript" max="100" value="50"></progress>
             </div>
+
+            <article class="textClass">
+                <h4>HTML:5 + CSS3</h4>
+                <p>
+                    I have quite a bit of experience in using HTML and CSS and i'm able to use this to make my own
+                    websites.
+                </p>
+                <h4>PHP</h4>
+                <p>
+                    I have a bit of experience in using PHP and understand most of the syntax and am able to understand
+                    code if I see it. I do sometimes run into some trouble while programming in the language.
+                </p>
+                <h4>JavaScript</h4>
+                <p>
+                    I have a decent amount of experience in using JavaScript and understand most of the syntax and am able to understand
+                    code if I see it. I'm able to program using JavaScript quite well.
+                </p>
+
+                <h4>TypeScript</h4>
+                <p>
+                    I have a tiny bit of experience of using TypeScript and am able to understand quite a bit of it. Coding it does become a struggle without the necessary help.
+                </p>
+            </article>
 
             <h2 id="projects" class="titleClass">My projects</h2>
             <div class="projects">
                 <div class="container">
-                    <img src="./assets/project1.jpg" alt="project 1" class="image">
+                    <img src="./assets/project1.png" alt="project 1" class="image">
                     <a href="#">
                         <div class="overlay">
                             <div class="text">My first project</div>
@@ -84,13 +101,15 @@
                     </a>
                 </div>
                 <div class="container">
-                    <img src="./assets/project2.jpg" alt="project 2" class="image">
-                    <div class="overlay">
-                        <div class="text">My Second project</div>
-                    </div>
+                    <img src="./assets/project2.png" alt="project 2" class="image">
+                    <a href="#">
+                        <div class="overlay">
+                            <div class="text">My Second project</div>
+                        </div>
+                    </a>
                 </div>
                 <div class="container">
-                    <img src="./assets/project3.jpg" alt="project 3" class="image">
+                    <img src="./assets/project3.png" alt="project 3" class="image">
                     <a href="#">
                         <div class="overlay">
                             <div class="text">My third project</div>
@@ -99,10 +118,11 @@
                 </div>
                 <div class="container">
                     <img src="./assets/project4.jpg" alt="project 4" class="image">
-                    <div class="overlay">
-                        <div class="text">My fourth project</div>
-                    </div>
-                </div>
+                    <a href="#">
+                        <div class="overlay">
+                            <div class="text">My fourth kproject</div>
+                        </div>
+                    </a>
             </div>
         </section>
     </div>
