cleaned up the images

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <img src="./assets/project4.jpg" alt="project 4" class="image">
                     <a href="#">
                         <div class="overlay">
-                            <div class="text">My fourth kproject</div>
+                            <div class="text">My fourth project</div>
                         </div>
                     </a>
             </div>
